...

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/usernameInput"
            android:text="@string/username_prompt" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
...
        app:layout_constraintTop_toBottomOf="@+id/usernameFormGroup">

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/passwordInput"
            android:text="@string/password_prompt" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
...
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/marginRight"
        app:layout_constraintStart_toStartOf="@+id/marginLeft"
        app:layout_constraintTop_toBottomOf="@+id/passwordFormGroup">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLoginButtonClick"
            android:text="@string/login_btn_title" />

        <Button
...
