<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.HomeActivity">


    <TextView
        android:id="@+id/HomePageTitle"
        style="@style/page_header"
        android:text="@string/home_page_title"
        app:layout_constraintBottom_toTopOf="@+id/searchContent"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/accountBottomNavigation"
        app:layout_constraintEnd_toStartOf="@+id/searchContentMarginRight"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toTopOf="@+id/searchContentMarginTop"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/searchContentMarginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="307dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/searchContentMarginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/searchContentMarginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93"
        tools:layout_constraintGuide_percent="0.92" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/accountBottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemHorizontalTranslationEnabled="true"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_items" />

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:closeIcon="@drawable/baseline_clear_24"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:queryHint="Search for items"
        android:searchHintIcon="@null"
        android:searchIcon="@drawable/baseline_search_24"
        app:layout_constraintEnd_toStartOf="@+id/searchContentMarginRight"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SortTitle"
        style="@style/page_header"
        android:layout_width="71dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:text="@string/sort_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/SortSpinner"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:entries="@array/sort_dropdown_options"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/SortTitle" />

    <TextView
        android:id="@+id/FiltersTitle"
        style="@style/page_header"
        android:layout_width="71dp"
        android:layout_height="29dp"
        android:text="@string/filter_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/SortSpinner" />

    <TextView
        android:id="@+id/PriceRange"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:text="@string/price_range"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/FiltersTitle" />

    <TextView
        android:id="@+id/minPrice"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:text="@string/min_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/PriceRange"
        app:layout_constraintTop_toBottomOf="@+id/FiltersTitle" />

    <EditText
        android:id="@+id/minInput"
        android:layout_width="65dp"
        android:layout_height="57dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="max"
        app:layout_constraintStart_toEndOf="@+id/minPrice"
        app:layout_constraintTop_toTopOf="@+id/FiltersTitle" />

    <TextView
        android:id="@+id/maxPrice"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:text="@string/max_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/minInput"
        app:layout_constraintTop_toBottomOf="@+id/FiltersTitle" />

    <EditText
        android:id="@+id/maxInput"
        android:layout_width="65dp"
        android:layout_height="57dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="max"
        app:layout_constraintStart_toEndOf="@+id/maxPrice"
        app:layout_constraintTop_toTopOf="@+id/FiltersTitle"  />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/searchContentMarginRight"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/TypeFilter">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/searchFilters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/TypeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clothing Type:"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/searchContentMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/PriceRange" />


</androidx.constraintlayout.widget.ConstraintLayout>