...

    <!--  Sort titles  -->
    <string name="sort_title">Sort by</string>

    <string-array name="sort_dropdown_options">
        <item>Please select your sort option</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
        <item>Item Quality: Used to New</item>
        <item>Item Quality: New to Used</item>
    </string-array>

    <!--  Filter titles  -->
...
    <string name="max_price"> Max: </string>
    <string name="item_types">Item Types:</string>

    <string-array name="type_dropdown_options">
        <item>Please select the clothing type</item>
        <item>Shoes</item>
        <item>T-shirt</item>
        <item>Pants</item>
        <item>Sandals</item>
        <item>Hoodie</item>
        <item>Jacket</item>
        <item>Pyjamas</item>
        <item>Crop Top</item>
...
